🐛 Fix the 🛟 emoji not being visible on Windows
Why:
- That emoji is used in the navigation menu for the support page.
- Windows system fonts don't yet include that emoji.
- Using a custom font for all the emojis will ensure that they look the
  same on every system.
- We also specify the current default font explicitly. In the future we
  may think more about trying out different fonts.

--- a/web/src/layout/Layout.module.css
+++ b/web/src/layout/Layout.module.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap');
+
 body {
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial, sans-serif, "Noto Color Emoji";
 }
 
 a {
