--- a/web/src/prints/printout.module.css
+++ b/web/src/prints/printout.module.css
@@ -2,5 +2,5 @@
     color: #000000;
     background-color: #ffffff;
     font-size: 16px;
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
 }
